[package]
name    = "bytekot-painter"
version = "1.0.1"
edition = "2021"

[dependencies]
cached        = { version = "0.49.2" }
antlr-rust    = { version = "0.3.0-beta" }
skia-safe     = { version = "0.71.0", features = ["windows", "textlayout"] }
skia-bindings = { version = "0.71.0" }
log           = { version = "0.4.21" }

[lib]
crate-type = ["cdylib"]